force-app/main/default/objects/Account/fields/Goal_3__c.field-meta.xml
<CustomField>
    <fullName>Goal_3__c</fullName>
    <description>Free form field that allows us to determine what it top priority that the customer is expecting with SALT…IE: Lower delinquency, Have students complete MM101 module</description>
    <inlineHelpText>Free form field that allows us to determine what it top priority that the customer is expecting with SALT…IE: Lower delinquency, Have students complete MM101 module</inlineHelpText>
    <label>Goal 3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>