force-app/main/default/objects/Account/fields/Grant_Amount__c.field-meta.xml
<CustomField>
    <fullName>Grant_Amount__c</fullName>
    <inlineHelpText>This field shows the total Grant amount that will be provided.  The Grant Period reflects the payment installments related to this total amount.  For example, a $100,000 for 5 years = $20,000 per year.</inlineHelpText>
    <label>Total Grant Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>