force-app/main/default/objects/Account/fields/Grant_Period__c.field-meta.xml
<CustomField>
    <fullName>Grant_Period__c</fullName>
    <label>Grant Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Year</fullName>
            </value>
            <value>
                <fullName>2 Years</fullName>
            </value>
            <value>
                <fullName>3 Years</fullName>
            </value>
            <value>
                <fullName>4 Years</fullName>
            </value>
            <value>
                <fullName>5 Years</fullName>
            </value>
            <value>
                <fullName>6 Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>