force-app/main/default/objects/Account/fields/Guarantor_Code__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_Code__c</fullName>
    <description>Code that goes with the Guarantee Agency</description>
    <label>Guarantor OE</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>