force-app/main/default/objects/Account/fields/Guarantor_System_Provider__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_System_Provider__c</fullName>
    <label>Guarantor System Provider</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ASA</fullName>
            </value>
            <value>
                <fullName>Great Lakes</fullName>
            </value>
            <value>
                <fullName>Guarantec</fullName>
            </value>
            <value>
                <fullName>Homegrown</fullName>
            </value>
            <value>
                <fullName>PHEAA</fullName>
            </value>
            <value>
                <fullName>USAF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>