force-app/main/default/objects/Account/fields/Household_Size__c.field-meta.xml
<CustomField>
    <fullName>Household_Size__c</fullName>
    <description>Number of members of the household</description>
    <label>Household Size</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>