force-app/main/default/objects/Account/fields/Invoice_Email_3__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Email_3__c</fullName>
    <label>Invoice Email 3</label>
    <type>Email</type>
</CustomField>