force-app/main/default/objects/Account/fields/Is_AutoCreated__c.field-meta.xml
<CustomField>
    <fullName>Is_AutoCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is AutoCreated</label>
    <type>Checkbox</type>
</CustomField>