force-app/main/default/objects/Account/fields/Key_Information__c.field-meta.xml
<CustomField>
    <fullName>Key_Information__c</fullName>
    <description>Free form field that provide a little more detail as to why chose SALT.</description>
    <inlineHelpText>Free form field that provides a little more detail as to why the school chose SALT. 
Information should be gathered during the pre-implementation meeting.</inlineHelpText>
    <label>Key Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>