force-app/main/default/objects/Account/fields/Last_Quarterly_Check_in_Call__c.field-meta.xml
<CustomField>
    <fullName>Last_Quarterly_Check_in_Call__c</fullName>
    <label>Last Quarterly Check in Call</label>
    <type>Date</type>
</CustomField>