force-app/main/default/objects/Account/fields/Lender_StrategicLendPartner__c.field-meta.xml
<CustomField>
    <fullName>Lender_StrategicLendPartner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if Lender has agreed to the 3 to 1 ratio of consolidation loans in exchange of payment of the default fee.</description>
    <label>Strategic Lend. Partner</label>
    <type>Checkbox</type>
</CustomField>