force-app/main/default/objects/Account/fields/Lost_as_of__c.field-meta.xml
<CustomField>
    <fullName>Lost_as_of__c</fullName>
    <description>When the school was lost</description>
    <label>Lost as of</label>
    <type>Date</type>
</CustomField>