force-app/main/default/objects/Account/fields/Lost_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Lost_Revenue__c</fullName>
    <inlineHelpText>This field shows the dollar amount of the annual contract price lost.</inlineHelpText>
    <label>Deprecated Lost Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>