force-app/main/default/objects/Account/fields/Membership_Activation_Status__c.field-meta.xml
<CustomField>
    <fullName>Membership_Activation_Status__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Membership Activation Status</label>
    <type>Checkbox</type>
</CustomField>