force-app/main/default/objects/Account/fields/MM101_Courses__c.field-meta.xml
<CustomField>
    <fullName>MM101_Courses__c</fullName>
    <description>This field indicates the course(s) a school has made either required or recommended their students&#39; complete.</description>
    <inlineHelpText>This field indicates the course(s) a school has made either required or recommended their students&#39; complete.</inlineHelpText>
    <label>SALT Courses Recommended Courses</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fundamentals</fullName>
            </value>
            <value>
                <fullName>Educational Planning</fullName>
            </value>
            <value>
                <fullName>Internships Incomes and Careers</fullName>
            </value>
            <value>
                <fullName>Employment</fullName>
            </value>
            <value>
                <fullName>Money Management</fullName>
            </value>
            <value>
                <fullName>Budgeting</fullName>
            </value>
            <value>
                <fullName>Student Loans</fullName>
            </value>
            <value>
                <fullName>Student Loan Repayment</fullName>
            </value>
            <value>
                <fullName>Credit and Debt Management</fullName>
            </value>
            <value>
                <fullName>Saving and Investing</fullName>
            </value>
            <value>
                <fullName>Risk Management</fullName>
            </value>
            <value>
                <fullName>Taxes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>