force-app/main/default/objects/Account/fields/MM101_Customized_Resource_Box__c.field-meta.xml
<CustomField>
    <fullName>MM101_Customized_Resource_Box__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If a school wants customized resources within their instance of SALT Courses check this box and then fill out the SALT Courses Customized Resources Form</description>
    <inlineHelpText>If a school wants customized resources within their instance of SALT Courses check this box and then fill out the SALT Courses Customized Resources Form</inlineHelpText>
    <label>SALT Courses Customized Resource Box</label>
    <type>Checkbox</type>
</CustomField>