force-app/main/default/objects/Account/fields/MM101_Report_Frequency__c.field-meta.xml
<CustomField>
    <fullName>MM101_Report_Frequency__c</fullName>
    <label>SALT Courses Report Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>