force-app/main/default/objects/Account/fields/MM101_Requirement_Details__c.field-meta.xml
<CustomField>
    <fullName>MM101_Requirement_Details__c</fullName>
    <label>SALT Courses Requirement Details</label>
    <type>TextArea</type>
</CustomField>