force-app/main/default/objects/Account/fields/MM101_Version__c.field-meta.xml
<CustomField>
    <fullName>MM101_Version__c</fullName>
    <label>SALT Courses Version</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Version 1</fullName>
            </value>
            <value>
                <fullName>Version 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>