force-app/main/default/objects/Account/fields/MyMoney_101_Requirement__c.field-meta.xml
<CustomField>
    <fullName>MyMoney_101_Requirement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If a school requires MyMoney101 in general</description>
    <inlineHelpText>If a school requires MyMoney101 in general</inlineHelpText>
    <label>SALT Courses Recommended</label>
    <type>Checkbox</type>
</CustomField>