force-app/main/default/objects/Account/fields/Next_Quarterly_Check_In_Call__c.field-meta.xml
<CustomField>
    <fullName>Next_Quarterly_Check_In_Call__c</fullName>
    <label>Next Quarterly Check In Call</label>
    <type>Date</type>
</CustomField>