force-app/main/default/objects/Account/fields/Not_ASA__c.field-meta.xml
<CustomField>
    <fullName>Not_ASA__c</fullName>
    <formula>if(not(begins(Upper(Name),&#39;ASA&#39;)),true,false)</formula>
    <label>Not ASA</label>
    <type>Checkbox</type>
</CustomField>