force-app/main/default/objects/Account/fields/Number_Activation_Status_Reports_to_Keep__c.field-meta.xml
<CustomField>
    <fullName>Number_Activation_Status_Reports_to_Keep__c</fullName>
    <inlineHelpText>4 - 1 Month 
12 - 1 Year 
18 - 1.5 Years 
24 - 2 Years 
36 - 3 Years</inlineHelpText>
    <label>Number Activation Status Reports to Keep</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>12</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>18</fullName>
            </value>
            <value>
                <fullName>24</fullName>
            </value>
            <value>
                <fullName>36</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>