force-app/main/default/objects/Account/fields/Number_of_Quarterly_Summaries_to_Keep__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Quarterly_Summaries_to_Keep__c</fullName>
    <label>Number of Quarterly Summaries to Keep</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>