force-app/main/default/objects/Account/fields/OE_Code__c.field-meta.xml
<CustomField>
    <fullName>OE_Code__c</fullName>
    <label>OE Code</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>