force-app/main/default/objects/Account/fields/OE_Name__c.field-meta.xml
<CustomField>
    <fullName>OE_Name__c</fullName>
    <formula>OE_Code__c &amp; &quot;(&quot; &amp; Name &amp; &quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OE+Name</label>
    <type>Text</type>
</CustomField>