force-app/main/default/objects/Account/fields/Overall_Activation_Rate__c.field-meta.xml
<CustomField>
    <fullName>Overall_Activation_Rate__c</fullName>
    <formula>IF( Total_Members_Invited__c =0, 0,  Total_Members_Activated__c /  Total_Members_Invited__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Activation Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>