force-app/main/default/objects/Account/fields/Passing_Grade__c.field-meta.xml
<CustomField>
    <fullName>Passing_Grade__c</fullName>
    <defaultValue>0.75</defaultValue>
    <label>Passing Grade</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>