force-app/main/default/objects/Account/fields/PEPS_School_Program_Length__c.field-meta.xml
<CustomField>
    <fullName>PEPS_School_Program_Length__c</fullName>
    <description>School program length - data taken from PEPS</description>
    <label>PEPS School Program Length</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Short-Term (300-599 hours)</fullName>
            </value>
            <value>
                <fullName>Graduate/Professional (&gt;= 300 hours)</fullName>
            </value>
            <value>
                <fullName>Non-Degree (600-899 hours)</fullName>
            </value>
            <value>
                <fullName>Non-Degree 1 Year (900-1799 hours)</fullName>
            </value>
            <value>
                <fullName>Non-Degree 2 Years (1800-2699 hours)</fullName>
            </value>
            <value>
                <fullName>Associate&#39;s Degree</fullName>
            </value>
            <value>
                <fullName>Bachelor&#39;s Degree</fullName>
            </value>
            <value>
                <fullName>First Professional Degree</fullName>
            </value>
            <value>
                <fullName>Master&#39;s Degree or Doctor&#39;s Degree</fullName>
            </value>
            <value>
                <fullName>Professional Certification</fullName>
            </value>
            <value>
                <fullName>Undergraduate (Previous Degree Required)</fullName>
            </value>
            <value>
                <fullName>Non-Degree 3 Plus Years (&gt;= 2700 hours)</fullName>
            </value>
            <value>
                <fullName>Two-Year Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>