force-app/main/default/objects/Account/fields/PEPS_School_Type__c.field-meta.xml
<CustomField>
    <fullName>PEPS_School_Type__c</fullName>
    <description>School type - data taken from PEPS</description>
    <label>PEPS School Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Foreign</fullName>
            </value>
            <value>
                <fullName>Foreign For-Profit</fullName>
            </value>
            <value>
                <fullName>Foreign Private</fullName>
            </value>
            <value>
                <fullName>Foreign Public</fullName>
            </value>
            <value>
                <fullName>Private, Nonprofit</fullName>
            </value>
            <value>
                <fullName>Proprietary</fullName>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>