force-app/main/default/objects/Account/fields/Primary_Risk_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Primary_Risk_Lost_Reason__c</fullName>
    <inlineHelpText>Select the most significant reason that puts this account at risk/lost.</inlineHelpText>
    <label>Primary Risk/Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client Staff Changes</fullName>
            </value>
            <value>
                <fullName>Competition</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>SALT Customer Service Issues</fullName>
            </value>
            <value>
                <fullName>SALT Outcomes</fullName>
            </value>
            <value>
                <fullName>SALT Product Issues</fullName>
            </value>
            <value>
                <fullName>Unresponsive Staff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>