force-app/main/default/objects/Account/fields/Prior_Wins_in_State__c.field-meta.xml
<CustomField>
    <fullName>Prior_Wins_in_State__c</fullName>
    <label>Prior Wins in State</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>