force-app/main/default/objects/Account/fields/Priority_High_Enrollment_School__c.field-meta.xml
<CustomField>
    <fullName>Priority_High_Enrollment_School__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A checkmark in this field indicates that this school is a Priority High Enrollment School.</inlineHelpText>
    <label>Priority High Enrollment School</label>
    <type>Checkbox</type>
</CustomField>