force-app/main/default/objects/Account/fields/qualtrics__NPS_Date__c.field-meta.xml
<CustomField>
    <fullName>qualtrics__NPS_Date__c</fullName>
    <label>NPS Date</label>
    <type>Date</type>
</CustomField>