force-app/main/default/objects/Account/fields/Quarterly_Summary_Report__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Summary_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quarterly Summary Report</label>
    <type>Checkbox</type>
</CustomField>