force-app/main/default/objects/Account/fields/RAE_Phone__c.field-meta.xml
<CustomField>
    <fullName>RAE_Phone__c</fullName>
    <label>RAE Phone</label>
    <type>Phone</type>
</CustomField>