force-app/main/default/objects/Account/fields/RAE_s_Email__c.field-meta.xml
<CustomField>
    <fullName>RAE_s_Email__c</fullName>
    <formula>Regional_Account_Executive__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RAE&#39;s Email</label>
    <type>Text</type>
</CustomField>