force-app/main/default/objects/Account/fields/RAE_s_Phone__c.field-meta.xml
<CustomField>
    <fullName>RAE_s_Phone__c</fullName>
    <formula>Regional_Account_Executive__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RAE&#39;s Phone</label>
    <type>Text</type>
</CustomField>