force-app/main/default/objects/Account/fields/Re_Apply_Date__c.field-meta.xml
<CustomField>
    <fullName>Re_Apply_Date__c</fullName>
    <inlineHelpText>Enter the date when it is time to re-apply for the foundation/donation.</inlineHelpText>
    <label>Re-Apply Date</label>
    <type>Date</type>
</CustomField>