force-app/main/default/objects/Account/fields/Receive_Detailed_Activation_Status_Rpt__c.field-meta.xml
<CustomField>
    <fullName>Receive_Detailed_Activation_Status_Rpt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receive Detailed Activation Status Rpt?</label>
    <type>Checkbox</type>
</CustomField>