force-app/main/default/objects/Account/fields/Regional_Account_Executive__c.field-meta.xml
<CustomField>
    <fullName>Regional_Account_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains the name of the Business Development Regional Account Executive for this account.</description>
    <inlineHelpText>This field contains the name of the Business Development Regional Account Executive for this account.</inlineHelpText>
    <label>Regional Account Executive</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>