force-app/main/default/objects/Account/fields/Reporting_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Frequency__c</fullName>
    <label>Reporting Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>6-Months</fullName>
            </value>
            <value>
                <fullName>Final</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>