force-app/main/default/objects/Account/fields/Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This marks the account as reviewed and approved after creation from lead conversion.</description>
    <inlineHelpText>This marks the account as reviewed and approved after creation from lead conversion.</inlineHelpText>
    <label>Reviewed</label>
    <type>Checkbox</type>
</CustomField>