force-app/main/default/objects/Account/fields/Sales_Model_Prediction__c.field-meta.xml
<CustomField>
    <fullName>Sales_Model_Prediction__c</fullName>
    <label>Sales Model Prediction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Loss</fullName>
            </value>
            <value>
                <fullName>Strong Loss</fullName>
            </value>
            <value>
                <fullName>Win</fullName>
            </value>
            <value>
                <fullName>Strong Win</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>