force-app/main/default/objects/Account/fields/SALT_Contract_Executed__c.field-meta.xml
<CustomField>
    <fullName>SALT_Contract_Executed__c</fullName>
    <description>The date the SALT contract was executed.</description>
    <inlineHelpText>The date the SALT contract was executed.</inlineHelpText>
    <label>SALT Contract Executed</label>
    <type>Date</type>
</CustomField>