force-app/main/default/objects/Account/fields/SALT_Product_Focus__c.field-meta.xml
<CustomField>
    <fullName>SALT_Product_Focus__c</fullName>
    <label>SALT Product Focus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All Product Offerings</fullName>
            </value>
            <value>
                <fullName>Early SALT Stage Services (ESSS)</fullName>
            </value>
            <value>
                <fullName>Free Salt Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>