force-app/main/default/objects/Account/fields/SALT_Purchase_Driver__c.field-meta.xml
<CustomField>
    <fullName>SALT_Purchase_Driver__c</fullName>
    <description>Should be Picklist including: Comprehehsive Product, ESSS - Financial Literacy
Client Services Administration - Should be updating this field once we have determined that a contract has been signed</description>
    <inlineHelpText>Should be Picklist including: Comprehehsive Product or ESSS - Fin Lit only
Client Services Administration - Should be updating this field once we have determined that a contract has been signed</inlineHelpText>
    <label>SALT Purchase Driver</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Comprehensive Product</fullName>
            </value>
            <value>
                <fullName>Debt Management Outreach</fullName>
            </value>
            <value>
                <fullName>Financial Literacy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>