force-app/main/default/objects/Account/fields/SALT_Reporting__c.field-meta.xml
<CustomField>
    <fullName>SALT_Reporting__c</fullName>
    <description>This multi picklist field replaces the former individual checkboxes for each report. 4/2015</description>
    <label>SALT Reporting</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Membership Activation Report</fullName>
            </value>
            <value>
                <fullName>EDMS School Portfolio Profile</fullName>
            </value>
            <value>
                <fullName>EDMS Communications Attempts</fullName>
            </value>
            <value>
                <fullName>EDMS Communications Results</fullName>
            </value>
            <value>
                <fullName>My Money 101</fullName>
            </value>
            <value>
                <fullName>Quarterly SALT Summary Report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>