force-app/main/default/objects/Account/fields/SALT_Vanity_URL__c.field-meta.xml
<CustomField>
    <fullName>SALT_Vanity_URL__c</fullName>
    <label>SALT Vanity URL</label>
    <type>Url</type>
</CustomField>