force-app/main/default/objects/Account/fields/Secondary_Risk_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Risk_Lost_Reason__c</fullName>
    <description>If the rating is = to anything but Stable need to put in a reason why the volume is at risk or lost.</description>
    <label>Secondary Risk/Lost Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client Staff Changes</fullName>
            </value>
            <value>
                <fullName>Competition</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>SALT Customer Service Issues</fullName>
            </value>
            <value>
                <fullName>SALT Outcomes</fullName>
            </value>
            <value>
                <fullName>SALT Product Issues</fullName>
            </value>
            <value>
                <fullName>Unresponsive Staff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>