force-app/main/default/objects/Account/fields/Sponsor_Name_s__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Name_s__c</fullName>
    <inlineHelpText>This field contains the name(s) of sponsor(s) that represent opportunities at this account.</inlineHelpText>
    <label>Sponsor Name(s)</label>
    <type>TextArea</type>
</CustomField>