force-app/main/default/objects/Account/fields/Sponsorship_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A check mark in this field means that there is a potential opportunity for Sponsorship.  Completing this field will trigger an email alert to management and the Sponsorship Development team.</inlineHelpText>
    <label>Sponsorship Opportunity</label>
    <type>Checkbox</type>
</CustomField>