force-app/main/default/objects/Account/fields/State_Win_Rate__c.field-meta.xml
<CustomField>
    <fullName>State_Win_Rate__c</fullName>
    <label>State Win Rate</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>