force-app/main/default/objects/Account/fields/Student_Loans__c.field-meta.xml
<CustomField>
    <fullName>Student_Loans__c</fullName>
    <inlineHelpText>Total dollar value of Student Loans for Credit Union</inlineHelpText>
    <label>Student Loans</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>