force-app/main/default/objects/Account/fields/Student_Loans_Deferred__c.field-meta.xml
<CustomField>
    <fullName>Student_Loans_Deferred__c</fullName>
    <inlineHelpText>Total dollar value of Student Loans that are deferred at Credit Union</inlineHelpText>
    <label>Student Loans Deferred</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>