force-app/main/default/objects/Account/fields/Time_Based_Workflow__c.field-meta.xml
<CustomField>
    <fullName>Time_Based_Workflow__c</fullName>
    <label>Time Based Workflow</label>
    <type>Date</type>
</CustomField>