force-app/main/default/objects/Account/fields/Total_Assets__c.field-meta.xml
<CustomField>
    <fullName>Total_Assets__c</fullName>
    <inlineHelpText>Total Assets for the Credit Union</inlineHelpText>
    <label>Total Assets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>