force-app/main/default/objects/Account/fields/Total_CU_Membership__c.field-meta.xml
<CustomField>
    <fullName>Total_CU_Membership__c</fullName>
    <inlineHelpText>Membership total number for Credit Union channel ONLY.</inlineHelpText>
    <label>Total CU Membership</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>