force-app/main/default/objects/Account/fields/Total_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Total_Enrollment__c</fullName>
    <label>Total Enrollment</label>
    <summarizedField>Opportunity.Total_in_Enrollment__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>