force-app/main/default/objects/Account/fields/Total_Enrollment_from_Recent_Oppty__c.field-meta.xml
<CustomField>
    <fullName>Total_Enrollment_from_Recent_Oppty__c</fullName>
    <label>Total Enrollment # from Recent Oppty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>