force-app/main/default/objects/Account/fields/Total_Members_Invited__c.field-meta.xml
<CustomField>
    <fullName>Total_Members_Invited__c</fullName>
    <description>Summarized value of all the Invited Members from Member Stats.</description>
    <label>Total Members Invited</label>
    <summarizedField>Member_Stats__c.Members_Invited__c</summarizedField>
    <summaryForeignKey>Member_Stats__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>