force-app/main/default/objects/Account/fields/Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Unique_ID__c</fullName>
    <description>This is the field that tells you what unique identifier the school is requiring</description>
    <inlineHelpText>This is the field that tells you what unique identifier the school is requiring</inlineHelpText>
    <label>Unique ID</label>
    <type>TextArea</type>
</CustomField>